Bug #45630
radsgw-admin bucket list/stats does not list/stat all buckets if user owns more than 1000 buckets
0%
Description
- radosgw-admin user modify --tenant t1 --uid user1 --max_buckets 0
Then using aws api, I create 2000 buckets in tenant t1 and owned by user1
I then go back to radosgw and list the buckets in that tenant owned by that user:
- radosgw-admin bucket list --tenant t1 --uid user1
It only lists 1000!
I only get 1000 with stats as well:
- radosgw-admin bucket stats --tenant t1 --uid user1
If I drop the --tenant and the --uid, radosgw-admin lists/stats all the buckets for all users
I know it is not recommended to go much above 1000 buckets per user...but these commands should still return all the buckets owned by the user
I do not know if this works without a tenant, but I suspect I'd get the same behavior.
Using 15.2.1 on CentOS 8
Related issues
History
#1 Updated by Casey Bodley over 2 years ago
- Assignee set to Or Friedmann
#2 Updated by J. Eric Ivancich over 2 years ago
- Assignee changed from Or Friedmann to J. Eric Ivancich
I checked w/ Or to OK transfer to me.
#3 Updated by J. Eric Ivancich over 2 years ago
- Pull request ID set to 35405
#4 Updated by J. Eric Ivancich over 2 years ago
- Status changed from New to Fix Under Review
- Backport set to octopus,nautilus
#5 Updated by J. Eric Ivancich over 2 years ago
- Target version changed from v15.2.1 to v16.0.0
#6 Updated by J. Eric Ivancich over 2 years ago
- Status changed from Fix Under Review to Pending Backport
#7 Updated by Nathan Cutler over 2 years ago
- Copied to Backport #45923: nautilus: radsgw-admin bucket list/stats does not list/stat all buckets if user owns more than 1000 buckets added
#8 Updated by Nathan Cutler over 2 years ago
- Copied to Backport #45924: octopus: radsgw-admin bucket list/stats does not list/stat all buckets if user owns more than 1000 buckets added
#9 Updated by Nathan Cutler over 2 years ago
- Status changed from Pending Backport to Resolved
While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".